<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_1"
        app:cardCornerRadius="@dimen/grid_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ts_4"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Device 1" />

                <TextView
                    android:id="@+id/device_signal_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:text="@string/device_label_signal"
                    android:textSize="@dimen/ts_1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_name" />

                <TextView
                    android:id="@+id/device_signal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_1"
                    android:textSize="@dimen/ts_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_signal_label"
                    tools:text="123" />

                <View
                    android:id="@+id/device_strength_guide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/device_strength"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/device_strength_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:text="@string/device_label_strength"
                    android:textSize="@dimen/ts_1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_name" />

                <EditText
                    android:id="@+id/device_strength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/device_strength_guide"
                    app:layout_constraintTop_toBottomOf="@id/device_strength_label"
                    tools:text="14" />

                <TextView
                    android:id="@+id/device_start_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:text="@string/device_label_start"
                    android:textSize="@dimen/ts_1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_strength" />

                <EditText
                    android:id="@+id/device_start_first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:layout_constraintEnd_toStartOf="@id/device_stop_first"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_start_label"
                    tools:text="123" />

                <EditText
                    android:id="@+id/device_start_second"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:layout_constraintEnd_toStartOf="@id/device_stop_second"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_start_first"
                    tools:text="123" />

                <TextView
                    android:id="@+id/device_stop_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:text="@string/device_label_stop"
                    android:textSize="@dimen/ts_1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/device_strength" />

                <EditText
                    android:id="@+id/device_stop_first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/device_start_first"
                    app:layout_constraintTop_toBottomOf="@id/device_stop_label"
                    tools:text="123" />

                <EditText
                    android:id="@+id/device_stop_second"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/device_start_second"
                    app:layout_constraintTop_toBottomOf="@id/device_stop_first"
                    tools:text="123" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/device_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_1"
                    android:background="@drawable/bg_button"
                    android:text="@string/device_label_test"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/device_name"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/device_edit_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/grid_2"
                android:src="@drawable/ic_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>